tests/ui/const-generics/const-arg-in-const-arg.min.stderr
error: generic parameters may not be used in const operations
  --> $DIR/const-arg-in-const-arg.rs:15:23
   |
LL |     let _: [u8; foo::<T>()];
   |                       ^ cannot perform const operation using `T`
   |
   = note: type parameters may not be used in const expressions
   = help: add `#![feature(generic_const_exprs)]` to allow generic const expressions

error: generic parameters may not be used in const operations
  --> $DIR/const-arg-in-const-arg.rs:16:23
   |
LL |     let _: [u8; bar::<N>()];
   |                       ^ cannot perform const operation using `N`
   |
   = help: const parameters may only be used as standalone arguments here, i.e. `N`
   = help: add `#![feature(generic_const_exprs)]` to allow generic const expressions

error: generic parameters may not be used in const operations
  --> $DIR/const-arg-in-const-arg.rs:17:23
   |
LL |     let _: [u8; faz::<'a>(&())];
   |                       ^^ cannot perform const operation using `'a`
   |
   = note: lifetime parameters may not be used in const expressions
   = help: add `#![feature(generic_const_exprs)]` to allow generic const expressions

error: generic parameters may not be used in const operations
  --> $DIR/const-arg-in-const-arg.rs:19:23
   |
LL |     let _: [u8; baz::<'a>(&())];
   |                       ^^ cannot perform const operation using `'a`
   |
   = note: lifetime parameters may not be used in const expressions
   = help: add `#![feature(generic_const_exprs)]` to allow generic const expressions

error: generic parameters may not be used in const operations
  --> $DIR/const-arg-in-const-arg.rs:20:23
   |
LL |     let _: [u8; faz::<'b>(&())];
   |                       ^^ cannot perform const operation using `'b`
   |
   = note: lifetime parameters may not be used in const expressions
   = help: add `#![feature(generic_const_exprs)]` to allow generic const expressions

error: generic parameters may not be used in const operations
  --> $DIR/const-arg-in-const-arg.rs:22:23
   |
LL |     let _: [u8; baz::<'b>(&())];
   |                       ^^ cannot perform const operation using `'b`
   |
   = note: lifetime parameters may not be used in const expressions
   = help: add `#![feature(generic_const_exprs)]` to allow generic const expressions

error: generic parameters may not be used in const operations
  --> $DIR/const-arg-in-const-arg.rs:26:23
   |
LL |     let _ = [0; bar::<N>()];
   |                       ^ cannot perform const operation using `N`
   |
   = help: const parameters may only be used as standalone arguments here, i.e. `N`
   = help: add `#![feature(generic_const_exprs)]` to allow generic const expressions

error: generic parameters may not be used in const operations
  --> $DIR/const-arg-in-const-arg.rs:27:23
   |
LL |     let _ = [0; faz::<'a>(&())];
   |                       ^^ cannot perform const operation using `'a`
   |
   = note: lifetime parameters may not be used in const expressions
   = help: add `#![feature(generic_const_exprs)]` to allow generic const expressions

error: generic parameters may not be used in const operations
  --> $DIR/const-arg-in-const-arg.rs:29:23
   |
LL |     let _ = [0; baz::<'a>(&())];
   |                       ^^ cannot perform const operation using `'a`
   |
   = note: lifetime parameters may not be used in const expressions
   = help: add `#![feature(generic_const_exprs)]` to allow generic const expressions

error: generic parameters may not be used in const operations
  --> $DIR/const-arg-in-const-arg.rs:30:23
   |
LL |     let _ = [0; faz::<'b>(&())];
   |                       ^^ cannot perform const operation using `'b`
   |
   = note: lifetime parameters may not be used in const expressions
   = help: add `#![feature(generic_const_exprs)]` to allow generic const expressions

error: generic parameters may not be used in const operations
  --> $DIR/const-arg-in-const-arg.rs:32:23
   |
LL |     let _ = [0; baz::<'b>(&())];
   |                       ^^ cannot perform const operation using `'b`
   |
   = note: lifetime parameters may not be used in const expressions
   = help: add `#![feature(generic_const_exprs)]` to allow generic const expressions

error: generic parameters may not be used in const operations
  --> $DIR/const-arg-in-const-arg.rs:33:24
   |
LL |     let _: Foo<{ foo::<T>() }>;
   |                        ^ cannot perform const operation using `T`
   |
   = note: type parameters may not be used in const expressions
   = help: add `#![feature(generic_const_exprs)]` to allow generic const expressions

error: generic parameters may not be used in const operations
  --> $DIR/const-arg-in-const-arg.rs:34:24
   |
LL |     let _: Foo<{ bar::<N>() }>;
   |                        ^ cannot perform const operation using `N`
   |
   = help: const parameters may only be used as standalone arguments here, i.e. `N`
   = help: add `#![feature(generic_const_exprs)]` to allow generic const expressions

error: generic parameters may not be used in const operations
  --> $DIR/const-arg-in-const-arg.rs:35:24
   |
LL |     let _: Foo<{ faz::<'a>(&()) }>;
   |                        ^^ cannot perform const operation using `'a`
   |
   = note: lifetime parameters may not be used in const expressions
   = help: add `#![feature(generic_const_exprs)]` to allow generic const expressions

error: generic parameters may not be used in const operations
  --> $DIR/const-arg-in-const-arg.rs:37:24
   |
LL |     let _: Foo<{ baz::<'a>(&()) }>;
   |                        ^^ cannot perform const operation using `'a`
   |
   = note: lifetime parameters may not be used in const expressions
   = help: add `#![feature(generic_const_exprs)]` to allow generic const expressions

error: generic parameters may not be used in const operations
  --> $DIR/const-arg-in-const-arg.rs:38:24
   |
LL |     let _: Foo<{ faz::<'b>(&()) }>;
   |                        ^^ cannot perform const operation using `'b`
   |
   = note: lifetime parameters may not be used in const expressions
   = help: add `#![feature(generic_const_exprs)]` to allow generic const expressions

error: generic parameters may not be used in const operations
  --> $DIR/const-arg-in-const-arg.rs:40:24
   |
LL |     let _: Foo<{ baz::<'b>(&()) }>;
   |                        ^^ cannot perform const operation using `'b`
   |
   = note: lifetime parameters may not be used in const expressions
   = help: add `#![feature(generic_const_exprs)]` to allow generic const expressions

error: generic parameters may not be used in const operations
  --> $DIR/const-arg-in-const-arg.rs:41:27
   |
LL |     let _ = Foo::<{ foo::<T>() }>;
   |                           ^ cannot perform const operation using `T`
   |
   = note: type parameters may not be used in const expressions
   = help: add `#![feature(generic_const_exprs)]` to allow generic const expressions

error: generic parameters may not be used in const operations
  --> $DIR/const-arg-in-const-arg.rs:42:27
   |
LL |     let _ = Foo::<{ bar::<N>() }>;
   |                           ^ cannot perform const operation using `N`
   |
   = help: const parameters may only be used as standalone arguments here, i.e. `N`
   = help: add `#![feature(generic_const_exprs)]` to allow generic const expressions

error: generic parameters may not be used in const operations
  --> $DIR/const-arg-in-const-arg.rs:43:27
   |
LL |     let _ = Foo::<{ faz::<'a>(&()) }>;
   |                           ^^ cannot perform const operation using `'a`
   |
   = note: lifetime parameters may not be used in const expressions
   = help: add `#![feature(generic_const_exprs)]` to allow generic const expressions

error: generic parameters may not be used in const operations
  --> $DIR/const-arg-in-const-arg.rs:45:27
   |
LL |     let _ = Foo::<{ baz::<'a>(&()) }>;
   |                           ^^ cannot perform const operation using `'a`
   |
   = note: lifetime parameters may not be used in const expressions
   = help: add `#![feature(generic_const_exprs)]` to allow generic const expressions

error: generic parameters may not be used in const operations
  --> $DIR/const-arg-in-const-arg.rs:46:27
   |
LL |     let _ = Foo::<{ faz::<'b>(&()) }>;
   |                           ^^ cannot perform const operation using `'b`
   |
   = note: lifetime parameters may not be used in const expressions
   = help: add `#![feature(generic_const_exprs)]` to allow generic const expressions

error: generic parameters may not be used in const operations
  --> $DIR/const-arg-in-const-arg.rs:48:27
   |
LL |     let _ = Foo::<{ baz::<'b>(&()) }>;
   |                           ^^ cannot perform const operation using `'b`
   |
   = note: lifetime parameters may not be used in const expressions
   = help: add `#![feature(generic_const_exprs)]` to allow generic const expressions

error[E0794]: cannot specify lifetime arguments explicitly if late bound lifetime parameters are present
  --> $DIR/const-arg-in-const-arg.rs:17:23
   |
LL |     let _: [u8; faz::<'a>(&())];
   |                       ^^
   |
note: the late bound lifetime parameter is introduced here
  --> $DIR/const-arg-in-const-arg.rs:10:14
   |
LL | const fn faz<'a>(_: &'a ()) -> usize { 13 }
   |              ^^

error[E0794]: cannot specify lifetime arguments explicitly if late bound lifetime parameters are present
  --> $DIR/const-arg-in-const-arg.rs:20:23
   |
LL |     let _: [u8; faz::<'b>(&())];
   |                       ^^
   |
note: the late bound lifetime parameter is introduced here
  --> $DIR/const-arg-in-const-arg.rs:10:14
   |
LL | const fn faz<'a>(_: &'a ()) -> usize { 13 }
   |              ^^

error: constant expression depends on a generic parameter
  --> $DIR/const-arg-in-const-arg.rs:24:17
   |
LL |     let _ = [0; foo::<T>()];
   |                 ^^^^^^^^^^
   |
   = note: this may fail depending on what value the parameter takes

error: constant expression depends on a generic parameter
  --> $DIR/const-arg-in-const-arg.rs:24:13
   |
LL |     let _ = [0; foo::<T>()];
   |             ^^^^^^^^^^^^^^^
   |
   = note: this may fail depending on what value the parameter takes

error[E0794]: cannot specify lifetime arguments explicitly if late bound lifetime parameters are present
  --> $DIR/const-arg-in-const-arg.rs:27:23
   |
LL |     let _ = [0; faz::<'a>(&())];
   |                       ^^
   |
note: the late bound lifetime parameter is introduced here
  --> $DIR/const-arg-in-const-arg.rs:10:14
   |
LL | const fn faz<'a>(_: &'a ()) -> usize { 13 }
   |              ^^

error[E0794]: cannot specify lifetime arguments explicitly if late bound lifetime parameters are present
  --> $DIR/const-arg-in-const-arg.rs:30:23
   |
LL |     let _ = [0; faz::<'b>(&())];
   |                       ^^
   |
note: the late bound lifetime parameter is introduced here
  --> $DIR/const-arg-in-const-arg.rs:10:14
   |
LL | const fn faz<'a>(_: &'a ()) -> usize { 13 }
   |              ^^

error[E0794]: cannot specify lifetime arguments explicitly if late bound lifetime parameters are present
  --> $DIR/const-arg-in-const-arg.rs:35:24
   |
LL |     let _: Foo<{ faz::<'a>(&()) }>;
   |                        ^^
   |
note: the late bound lifetime parameter is introduced here
  --> $DIR/const-arg-in-const-arg.rs:10:14
   |
LL | const fn faz<'a>(_: &'a ()) -> usize { 13 }
   |              ^^

error[E0794]: cannot specify lifetime arguments explicitly if late bound lifetime parameters are present
  --> $DIR/const-arg-in-const-arg.rs:38:24
   |
LL |     let _: Foo<{ faz::<'b>(&()) }>;
   |                        ^^
   |
note: the late bound lifetime parameter is introduced here
  --> $DIR/const-arg-in-const-arg.rs:10:14
   |
LL | const fn faz<'a>(_: &'a ()) -> usize { 13 }
   |              ^^

error[E0794]: cannot specify lifetime arguments explicitly if late bound lifetime parameters are present
  --> $DIR/const-arg-in-const-arg.rs:43:27
   |
LL |     let _ = Foo::<{ faz::<'a>(&()) }>;
   |                           ^^
   |
note: the late bound lifetime parameter is introduced here
  --> $DIR/const-arg-in-const-arg.rs:10:14
   |
LL | const fn faz<'a>(_: &'a ()) -> usize { 13 }
   |              ^^

error[E0794]: cannot specify lifetime arguments explicitly if late bound lifetime parameters are present
  --> $DIR/const-arg-in-const-arg.rs:46:27
   |
LL |     let _ = Foo::<{ faz::<'b>(&()) }>;
   |                           ^^
   |
note: the late bound lifetime parameter is introduced here
  --> $DIR/const-arg-in-const-arg.rs:10:14
   |
LL | const fn faz<'a>(_: &'a ()) -> usize { 13 }
   |              ^^

error: aborting due to 33 previous errors

For more information about this error, try `rustc --explain E0794`.
